Fix background paragraph margin/padding issues on mobile

--- a/assets/design-styles/modern/css/style-modern.css
+++ b/assets/design-styles/modern/css/style-modern.css
@@ -70,3 +70,12 @@
 		}
 	}
 }
+
+p.has-background {
+
+	@media (max-width: 795px) {
+		margin-left: var(--theme-block-padding-x);
+		margin-right: var(--theme-block-padding-x);
+	}
+}
+
